<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>odom_evaluator</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="matsushita.sena@gmail.com">sen</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>tutrc_ament_node</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>message_filters</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>angles</depend>
  <depend>blackbox</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
