<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_publisher</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="reopeo0526@gmail.com">reopeo</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>tutrc_ament</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
