<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simulation_launcher</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="matsushita.sena@gmail.com">sen</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>tutrc_ament_node</buildtool_depend>

  <depend>sensor_msgs</depend>
  <exec_depend>aws_robomaker_small_warehouse_world</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>lcmcl</exec_depend>
  <exec_depend>sim_lcmcl</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
